src/parser/snapshots/ling__parser__expr__tests__group.snap
---
source: src/parser/expr.rs
expression: "test_parse(\"(1)\", |p| p.parse_expr())"
---
(Ok(Const(ConstIdx(0))), "", [])
