src/parser/snapshots/ling__parser__expr__tests__group_err.snap
---
source: src/parser/expr.rs
expression: "test_parse(\"(1 1)\", |p| p.parse_expr())"
---
(Err(Unexpected(
  expected: "end of parenthesised expression",
  span: Span(
    start: 3,
    end: 4,
  ),
)), "")
