src/parser/snapshots/ling__parser__expr__tests__l_assoc.snap
---
source: src/parser/expr.rs
expression: "test_parse(\"1 + 2 + 3\", |p| p.parse_expr())"
---
(Ok(BinOp(
  op: Add,
  lhs: BinOp(
    op: Add,
    lhs: Const(ConstIdx(0)),
    rhs: Const(ConstIdx(1)),
  ),
  rhs: Const(ConstIdx(2)),
)), "")
