src/parser/snapshots/ling__parser__expr__tests__unit.snap
---
source: src/parser/expr.rs
expression: "test_parse(\"()\", |p| p.parse_expr())"
---
(Ok(Unit), "")
